--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.7",
-    "@babel/preset-react": "^7.26.3",
     "typescript": "~5.6.2",
-    "vite": "^6.0.11"
+    "vite": "^6.0.11",
+    "vite-plugin-babel": "^1.3.0"
   }
 }
